<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Multi</string>

    <string name="title_browse">Browse</string>
    <string name="title_tokens">Tokens</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_profile">Profile</string>

    <string name="multi_description">The trusted wallet &amp; browser for web3</string>
    <string name="btn_label_continue">Continue</string>
    <string name="btn_label_next">Next</string>
    <string name="btn_label_get_started">Get Started</string>

    <string name="welcome_to_multi">Welcome to multi</string>

    <string name="step_1_label">1. Setup your wallet</string>
    <string name="step_1_title">Setup your wallet</string>

    <string name="step_2_label">2. Claim your identity</string>
    <string name="step_2_title">Claim your identity</string>

    <string name="step_3_label">3. Secure your device</string>
    <string name="step_3_title">Secure your device</string>

    <string name="link_existing">Link Existing</string>

    <string name="name_wallet_title">Name your new wallet.</string>
    <string name="edit">edit</string>
    <string name="done">done</string>
    <string name="my_wallet_hint">my wallet</string>
    <string name="public_key_hint" tools:ignore="TypographyEllipsis">0x...f0xd</string>
    <string name="passphrase_warning_title">Save this passphrase!</string>
    <string name="passphrase_warning_text">
        If you lose this code, you
        \nwill not be able to recover
        \nyour funds.
    </string>
    <string name="mnemonic_placeholder">
          dog parrot bikini
        \nflight carton hint
        \nteeth boy jobs
        \neat four kings
    </string>
    <string name="mnemonic_disclaimer">
          By continuing, you agree to
        \nhaving saved the passphrase
        \nsafely offline.
    </string>
    <string name="confirm_passphrase_title">Confirm your passphrase.</string>
    <string name="confirm_passphrase_text">
          Enter your phrase to confirm that you
        \nhave written down this code safely.
    </string>
    <string name="wallet_address_subtext" tools:ignore="TypographyEllipsis">
        0x...%s
    </string>
    <string name="wallet_issue_date" tools:ignore="TypographyEllipsis">
          Issued %s
    </string>
    <string name="recent_activity">Recent Activity</string>
    <string name="you_don_t_have_any_transactions">
          You don\'t have any transactions
        \n
        \n😱😨😰
    </string>
    <string name="value_in_eth">
        %s ETH
    </string>
    <string name="success">Success</string>
    <string name="declined">Declined</string>
    <string name="load_transactions_error">Unable to load transactions</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="tx_amount_hint">0.25 mETH</string>
    <string name="incoming_transaction">Incoming Transaction</string>
    <string name="outgoing_transaction">Outgoing Transaction</string>
    <string name="recipient">Recipient</string>
    <string name="sender">Sender</string>
    <string name="transaction_hash">Transaction Hash</string>
    <string name="block_number">Block Number</string>
    <string name="timestamp">Timestamp</string>
    <string name="gas">Gas</string>
    <string name="gas_limit">Gas Limit</string>
    <string name="gas_used">Gas Used</string>
    <string name="cumulative_gas_used">Cumulative Gas Used</string>
    <string name="gas_price">Gas Price</string>
    <string name="wallet_balance">Balance</string>
    <string name="create_identity">Create Identity</string>
    <string name="create_identity_description">Explain What Creating An Identity Means</string>
    <string name="link_existing_label">Already set up?</string>
    <string name="name_uname_step_title">First, the formalities</string>
    <string name="full_name_hint">Full Name</string>
    <string name="username">Username</string>
    <string name="request_phonenumber_title">Can I get your number?</string>
    <string name="request_phonenumber_description">Explain why we need phone number</string>
    <string name="phone_number_hint">123–456–7890</string>
    <string name="btn_label_submit">Submit</string>
    <string name="enter_verification_code">Verify your number</string>
    <string name="enter_verification_code_description">A one time code has been sent to your number.\nEnter it to complete verifying your phone number.</string>
    <string name="no_second_device">I don\'t have another device</string>
    <string name="link_another_device">Link another device</string>
    <string name="link_device_description">Open Multi on another device and scan the code that appears after tapping Link an existing identity.</string>
    <string name="phone_number_verified">Phone number verified!</string>
    <string name="finish_setup_description">Continue to finish setting up your wallet.</string>
    <string name="set_passphrase">Set a passphrase</string>
    <string name="passphrase_description">This passphrase can be used to link another device or recover your account</string>
    <string name="passphrase_hint">Passphrase</string>
    <string name="invalid_phone_number_error">Please enter a valid phone number.</string>
    <string name="invalid_name_error">Please enter a valid name.</string>
    <string name="username_too_short_error">Username must be at least 3 characters.</string>
    <string name="invalid_username_error">Invalid username. Only letters and numbers are allowed. No spaces.</string>
    <string name="username_taken_error">Username already taken.</string>
    <string name="unable_to_validate_username_error">Unable to validate username. Please try again.</string>
    <string name="phone_number_verification_error">Unable to verify phone number. Please try again.</string>
    <string name="confirm_passphrase_hint">Confirm Passphrase</string>
    <string name="invalid_passphrase_error">Please enter a valid passphrase.</string>
    <string name="differing_passphrase_error">Passphrases don\'t match. Please enter the same passphrase both times.</string>
    <string name="creating_account_description">Please wait while we finish setting up your wallet!</string>
    <string name="creating_account">Creating Wallet…</string>
</resources>
