<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/browseFragment"
        android:icon="@drawable/ic_explore_black_24dp"
        android:title="@string/title_browse" />

    <item
        android:id="@+id/tokenFragment"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_tokens" />

    <item
        android:id="@+id/transactionsFragment"
        android:icon="@drawable/ic_account_balance_black_24dp"
        android:title="@string/title_transactions" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/transactionDetailsFragment"
        android:title="@string/transaction_details"/>
</menu>
