<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:src="@drawable/ic_launcher_dsys"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:gravity="center_vertical"
        android:textSize="32sp"
        android:textColor="@color/colorPrimary"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintStart_toEndOf="@+id/icon"
        app:layout_constraintTop_toTopOf="@+id/icon"
        app:layout_constraintBottom_toBottomOf="@+id/icon"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tagline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:text="@string/multi_description"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="monospace"
        android:maxLines="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightGrey"
        android:layout_marginTop="16dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintTop_toBottomOf="@+id/tagline"/>

    <TextView
        android:id="@+id/step_1_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/step_1_label"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:fontFamily="monospace"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/step_2_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/step_2_label"
        android:textColor="@color/lightGrey"
        android:textSize="18sp"
        android:fontFamily="monospace"
        app:layout_constraintTop_toBottomOf="@+id/step_1_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/step_3_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/step_3_label"
        android:textColor="@color/lightGrey"
        android:textSize="18sp"
        android:fontFamily="monospace"
        app:layout_constraintTop_toBottomOf="@+id/step_2_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/continue_btn"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/btn_label_continue"
        android:textSize="16sp"
        android:fontFamily="monospace"
        android:background="@drawable/ic_rounded_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/step_3_label"
        />

</android.support.constraint.ConstraintLayout>