<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:src="@drawable/ic_security"
        android:tint="@color/colorPrimary"
        android:background="@drawable/bg_circle"
        android:backgroundTint="@color/colorAccent"
        android:padding="48dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/set_passphrase"
        android:textAllCaps="true"
        android:fontFamily="@font/opensans_bold"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon"/>

    <TextView
        android:id="@+id/step_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:text="@string/passphrase_description"
        android:textColor="@color/lightGrey"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/loading_spinner"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="invisible"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/step_description"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/passphrase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/darkGrey"
        android:hint="@string/passphrase_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/step_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/confirm_passphrase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:textColor="@color/darkGrey"
        android:hint="@string/confirm_passphrase_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/passphrase"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/btn_label_next"
        android:textSize="16sp"
        android:layout_marginBottom="64dp"
        android:minWidth="200dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:background="@drawable/ic_rounded_button"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_passphrase"/>

</android.support.constraint.ConstraintLayout>