<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:paddingBottom="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="192dp"
            android:layout_height="192dp"
            android:src="@drawable/ic_verify_phone"
            android:tint="@color/colorPrimary"
            android:background="@drawable/bg_circle"
            android:backgroundTint="@color/colorAccent"
            android:padding="64dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="24sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/request_phonenumber_title"
            android:fontFamily="@font/opensans_bold"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toBottomOf="@+id/icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/step_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            android:text="@string/request_phonenumber_description"
            android:textColor="@color/lightGrey"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.hbb20.CountryCodePicker
            android:id="@+id/country_code_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="48dp"
            app:ccpDialog_showFlag="false"
            app:ccp_rememberLastSelection="true"
            app:ccp_autoDetectCountry="true"
            app:ccp_hintExampleNumber="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/step_description"
            app:ccp_textSize="16sp"
            app:ccp_showFlag="false"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:hint="@string/phone_number_hint"
            android:textSize="16sp"
            android:textColor="@color/darkGrey"
            android:inputType="phone"
            app:layout_constraintTop_toTopOf="@+id/country_code_picker"
            app:layout_constraintBottom_toBottomOf="@+id/country_code_picker"
            app:layout_constraintStart_toEndOf="@+id/country_code_picker"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:text="@string/btn_label_next"
            android:textSize="16sp"
            android:minWidth="200dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:background="@drawable/ic_rounded_button"
            android:backgroundTint="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_number"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>